# oxide_os

./: .ahoy_creds  .gitignore  .mcp.json  AGENTS.md  ANALv10.md  BOOT_FIX_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DAPLAN.md  FCNTL_IMPLEMENTATION.md  FIXME.md  FUCKINGHELL.md  LICENSE  Makefile  README.md  STDIO_BUFFERING.md  TASK.md  TESTCOLORS_PERFORMANCE_FIX.md  THIS.md  V2ANAL.MD  V3ANAL.MD  V4ANAL.MD  VIM_ANALYSIS.md  VIM_IMPLEMENTATION_SUMMARY.md  VIM_INTEGRATION_COMPLETE.md  ahoy2.sh  analv3.md  analysis.md  app_gaps.md  asm_bad.md  assemblyx.md  build.md  categorize_functions.py  continue.md  driver_module.md  functions_list.txt  graphics.md  headers_list.txt  libs_list.txt  (+18 more)
apps/gwbasic/: Cargo.toml
apps/gwbasic/src/: efflux_main.rs  fileio.rs  functions.rs  graphics.rs  interpreter.rs  lib.rs  main.rs  oxide_main.rs  parser.rs  value.rs
apps/gwbasic/src/graphics_backend/: ascii.rs  mod.rs  watos_vga.rs
apps/gwbasic/src/platform/: efflux_platform.rs  mod.rs  oxide_platform.rs  std_platform.rs  stub_platform.rs  watos_platform.rs
apps/gwbasic/tests/: integration_test.rs
crates/ai/efflux-hnsw/: Cargo.toml
crates/ai/efflux-hnsw/src/: distance.rs  lib.rs
crates/ai/efflux-indexd/: Cargo.toml
crates/ai/efflux-indexd/src/: config.rs  daemon.rs  ipc.rs  queue.rs  watcher.rs
crates/arch/arch-x86_64/: Cargo.toml  build.rs
crates/arch/arch-x86_64/src/: ap_boot.rs  ap_boot.s  apic.rs  context.rs  exceptions.rs  gdt.rs  idt.rs  lib.rs  serial.rs  syscall.rs  usermode.rs
crates/fs/oxidefs/: Cargo.toml
crates/fs/oxidefs/src/: bitmap.rs  dir.rs  file.rs  inode.rs  journal.rs  lib.rs  superblock.rs
crates/mm/efflux-mm-paging/: Cargo.toml
crates/mm/efflux-mm-paging/src/: entry.rs  lib.rs  mapper.rs
crates/mm/mm-paging/: Cargo.toml
crates/mm/mm-paging/src/: lib.rs  mapper.rs  table.rs
crates/proc/efflux-proc/: Cargo.toml
crates/proc/efflux-proc/src/: address_space.rs  exec.rs  fork.rs  lib.rs  process.rs  wait.rs
crates/proc/proc/: Cargo.toml
crates/proc/proc/src/: address_space.rs  clone.rs  exec.rs  fork.rs  futex.rs  lib.rs  meta.rs  process.rs  wait.rs
crates/security/efflux-trust/: Cargo.toml
crates/security/efflux-trust/src/: key.rs  share.rs  store.rs
crates/smp/smp/: Cargo.toml
crates/smp/smp/src/: cpu.rs  ipi.rs  lib.rs  percpu.rs  tlb.rs
crates/syscall/efflux-syscall/: Cargo.toml
crates/syscall/efflux-syscall/src/: dir.rs  lib.rs  signal.rs  socket.rs  vfs.rs
crates/syscall/syscall/: Cargo.toml
crates/syscall/syscall/src/: dir.rs  firewall.rs  lib.rs  memory.rs  poll.rs  signal.rs  socket.rs  time.rs  vfs.rs  vfs_ext.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: buffer.rs  cell.rs  color.rs  handler.rs  lib.rs  parser.rs  renderer.rs
crates/tty/efflux-pty/: Cargo.toml
crates/tty/efflux-pty/src/: lib.rs
crates/tty/tty/: Cargo.toml
crates/tty/tty/src/: ldisc.rs  lib.rs  termios.rs  tty.rs
crates/tty/vt/: Cargo.toml
crates/tty/vt/src/: lib.rs  lockfree_ring.rs
crates/vfs/devfs/: Cargo.toml
crates/vfs/devfs/src/: devices.rs  input.rs  kmsg.rs  lib.rs
crates/vfs/efflux-procfs/: Cargo.toml
crates/vfs/efflux-procfs/src/: lib.rs
crates/vfs/procfs/: Cargo.toml
crates/vfs/procfs/src/: lib.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/acpi/acpi/: Cargo.toml
kernel/acpi/acpi/src/: lib.rs  madt.rs  rsdp.rs  sdt.rs
kernel/ai/embed/: Cargo.toml
kernel/ai/embed/src/: lib.rs  tokenizer.rs
kernel/ai/hnsw/: Cargo.toml
kernel/ai/hnsw/src/: node.rs
kernel/ai/indexd/: Cargo.toml
kernel/ai/indexd/src/: config.rs  daemon.rs  queue.rs  watcher.rs
kernel/arch/arch-aarch64/: Cargo.toml
kernel/arch/arch-aarch64/src/: exceptions.rs  lib.rs  serial.rs
kernel/arch/arch-mips64/: Cargo.toml
kernel/arch/arch-x86_64/: Cargo.toml  build.rs
kernel/async/epoll/: Cargo.toml
kernel/block/gpt/: Cargo.toml
kernel/compat/python-sandbox/: Cargo.toml
kernel/compat/syscall-compat/: Cargo.toml
kernel/container/cgroup/: Cargo.toml
kernel/container/namespace/: Cargo.toml
kernel/container/seccomp/: Cargo.toml
kernel/drivers/driver-core/: Cargo.toml
kernel/drivers/driver-traits/: Cargo.toml
kernel/drivers/pci/: Cargo.toml
kernel/drivers/virtio-core/: Cargo.toml
kernel/fs/ext4/: Cargo.toml
kernel/fs/oxidefs/: Cargo.toml
kernel/graphics/fb/: Cargo.toml
kernel/hypervisor/virtio-emu/: Cargo.toml
kernel/input/input/: Cargo.toml
kernel/libc-support/dl/: Cargo.toml
kernel/media/automount/: Cargo.toml
kernel/mm/mm-core/: Cargo.toml
kernel/mm/mm-cow/: Cargo.toml
kernel/mm/mm-heap/: Cargo.toml
kernel/mm/mm-manager/: Cargo.toml
kernel/mm/mm-pagedb/: Cargo.toml
kernel/mm/mm-paging/: Cargo.toml
kernel/mm/mm-slab/: Cargo.toml
kernel/mm/mm-vma/: Cargo.toml
kernel/net/dns/: Cargo.toml
kernel/net/nfs/: Cargo.toml
kernel/net/tcpip/: README.md
kernel/perf/: Cargo.toml
kernel/perf/src/: lib.rs  output.rs  stats.rs
kernel/proc/proc/: Cargo.toml
kernel/proc/proc-traits/: Cargo.toml
kernel/sched/sched/: Cargo.toml
kernel/sched/sched-traits/: Cargo.toml
kernel/security/crypto/: Cargo.toml
kernel/smp/smp/: Cargo.toml
kernel/src/: arch.rs  cmdline.rs  console.rs  debug.rs  debug_buffer.rs  exports.rs  fault.rs  globals.rs  init.rs  kstack_guard.rs  main.rs  memory.rs  memtest.rs  module_driver_bridge.rs  mount.rs  oom.rs  process.rs  scheduler.rs  smp_init.rs  vfs_sched_glue.rs
kernel/syscall/syscall/: Cargo.toml
kernel/tty/compositor/: Cargo.toml
kernel/tty/terminal/: Cargo.toml
kernel/tty/tty/: Cargo.toml
kernel/tty/vkbd/: Cargo.toml
kernel/tty/vt/: Cargo.toml
kernel/usb/usb/: Cargo.toml
kernel/vfs/devfs/: Cargo.toml
kernel/vfs/initramfs/: Cargo.toml
kernel/vfs/procfs/: Cargo.toml
kernel/vfs/sysfs/: Cargo.toml
kernel/vfs/tmpfs/: Cargo.toml
kernel/vfs/vfs/: Cargo.toml
userspace/coreutils/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  TEST_PLAN.md  TOP.md  USER_GROUP_EXAMPLES.md  USER_GROUP_TEST_PLAN.md  UTILITIES.md  VIM.md  XARGS_EXAMPLES.md  XARGS_IMPLEMENTATION.md  XARGS_TESTS.md  test_fds
userspace/modutils/: Cargo.toml
(+1638 files in other folders)
