[workspace]
resolver = "2"

members = [
    "kernel",
    "crates/core/efflux-core",
    "crates/core/efflux-log",
    "crates/arch/efflux-arch-traits",
    "crates/arch/efflux-arch-x86_64",
    "crates/mm/efflux-mm-traits",
    "crates/mm/efflux-mm-frame",
    "crates/mm/efflux-mm-paging",
    "crates/mm/efflux-mm-heap",
    "crates/mm/efflux-mm-cow",
    "crates/sched/efflux-sched-traits",
    "crates/sched/efflux-sched",
    "crates/proc/efflux-proc-traits",
    "crates/proc/efflux-proc",
    "crates/exec/efflux-elf",
    "crates/syscall/efflux-syscall",
    "crates/boot/efflux-boot-proto",
    "crates/drivers/efflux-driver-traits",
    "crates/drivers/serial/efflux-driver-uart-8250",
    "crates/drivers/block/efflux-virtio-blk",
    "crates/drivers/block/efflux-nvme",
    "crates/drivers/block/efflux-ahci",
    "crates/block/efflux-block",
    "crates/block/efflux-gpt",
    "crates/vfs/efflux-vfs",
    "crates/vfs/efflux-devfs",
    "crates/vfs/efflux-tmpfs",
    "crates/vfs/efflux-initramfs",
    "crates/vfs/efflux-procfs",
    "crates/fs/efflux-effluxfs",
    "crates/fs/efflux-fat32",
    "crates/net/efflux-net",
    "crates/net/efflux-tcpip",
    "crates/net/efflux-dhcp",
    "crates/net/efflux-dns",
    "crates/drivers/net/efflux-virtio-net",
    "crates/input/efflux-input",
    "crates/drivers/input/efflux-ps2",
    "crates/drivers/input/efflux-virtio-input",
    "crates/graphics/efflux-fb",
    "crates/drivers/gpu/efflux-virtio-gpu",
    "crates/audio/efflux-audio",
    "crates/drivers/audio/efflux-virtio-snd",
    "crates/usb/efflux-usb",
    "crates/drivers/usb/efflux-xhci",
    "crates/drivers/usb/efflux-usb-msc",
    "crates/drivers/usb/efflux-usb-hid",
    "crates/container/efflux-namespace",
    "crates/container/efflux-cgroup",
    "crates/container/efflux-seccomp",
    "crates/tty/efflux-tty",
    "crates/tty/efflux-pty",
    "crates/signal/efflux-signal",
    "crates/smp/efflux-smp",
    "crates/module/efflux-module",
    "userspace/efflux-libc",
    "userspace/init",
    "userspace/shell",
    "userspace/login",
    "userspace/getty",
    "userspace/coreutils",
    "userspace/modutils",
    "bootloader/efflux-boot-uefi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/efflux"

[workspace.dependencies]
bitflags = "2.4"
spin = "0.9"
log = { version = "0.4", default-features = false }

# Internal crates
efflux-core = { path = "crates/core/efflux-core" }
efflux-log = { path = "crates/core/efflux-log" }
efflux-arch-traits = { path = "crates/arch/efflux-arch-traits" }
efflux-arch-x86_64 = { path = "crates/arch/efflux-arch-x86_64" }
efflux-mm-traits = { path = "crates/mm/efflux-mm-traits" }
efflux-mm-frame = { path = "crates/mm/efflux-mm-frame" }
efflux-mm-paging = { path = "crates/mm/efflux-mm-paging" }
efflux-mm-heap = { path = "crates/mm/efflux-mm-heap" }
efflux-mm-cow = { path = "crates/mm/efflux-mm-cow" }
efflux-sched-traits = { path = "crates/sched/efflux-sched-traits" }
efflux-sched = { path = "crates/sched/efflux-sched" }
efflux-proc-traits = { path = "crates/proc/efflux-proc-traits" }
efflux-proc = { path = "crates/proc/efflux-proc" }
efflux-elf = { path = "crates/exec/efflux-elf" }
efflux-syscall = { path = "crates/syscall/efflux-syscall" }
efflux-boot-proto = { path = "crates/boot/efflux-boot-proto" }
efflux-driver-traits = { path = "crates/drivers/efflux-driver-traits" }
efflux-vfs = { path = "crates/vfs/efflux-vfs" }
efflux-devfs = { path = "crates/vfs/efflux-devfs" }
efflux-tmpfs = { path = "crates/vfs/efflux-tmpfs" }
efflux-initramfs = { path = "crates/vfs/efflux-initramfs" }
efflux-procfs = { path = "crates/vfs/efflux-procfs" }
efflux-tty = { path = "crates/tty/efflux-tty" }
efflux-pty = { path = "crates/tty/efflux-pty" }
efflux-signal = { path = "crates/signal/efflux-signal" }
efflux-smp = { path = "crates/smp/efflux-smp" }
efflux-module = { path = "crates/module/efflux-module" }
efflux-block = { path = "crates/block/efflux-block" }
efflux-gpt = { path = "crates/block/efflux-gpt" }
efflux-virtio-blk = { path = "crates/drivers/block/efflux-virtio-blk" }
efflux-nvme = { path = "crates/drivers/block/efflux-nvme" }
efflux-ahci = { path = "crates/drivers/block/efflux-ahci" }
efflux-effluxfs = { path = "crates/fs/efflux-effluxfs" }
efflux-fat32 = { path = "crates/fs/efflux-fat32" }
efflux-net = { path = "crates/net/efflux-net" }
efflux-tcpip = { path = "crates/net/efflux-tcpip" }
efflux-dhcp = { path = "crates/net/efflux-dhcp" }
efflux-dns = { path = "crates/net/efflux-dns" }
efflux-virtio-net = { path = "crates/drivers/net/efflux-virtio-net" }
efflux-input = { path = "crates/input/efflux-input" }
efflux-ps2 = { path = "crates/drivers/input/efflux-ps2" }
efflux-virtio-input = { path = "crates/drivers/input/efflux-virtio-input" }
efflux-fb = { path = "crates/graphics/efflux-fb" }
efflux-virtio-gpu = { path = "crates/drivers/gpu/efflux-virtio-gpu" }
efflux-audio = { path = "crates/audio/efflux-audio" }
efflux-virtio-snd = { path = "crates/drivers/audio/efflux-virtio-snd" }
efflux-usb = { path = "crates/usb/efflux-usb" }
efflux-xhci = { path = "crates/drivers/usb/efflux-xhci" }
efflux-usb-msc = { path = "crates/drivers/usb/efflux-usb-msc" }
efflux-usb-hid = { path = "crates/drivers/usb/efflux-usb-hid" }
efflux-namespace = { path = "crates/container/efflux-namespace" }
efflux-cgroup = { path = "crates/container/efflux-cgroup" }
efflux-seccomp = { path = "crates/container/efflux-seccomp" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
