[workspace]
resolver = "2"

members = [
    "kernel",
    "crates/core/os_core",
    "crates/core/os_log",
    "crates/arch/arch-traits",
    "crates/arch/arch-x86_64",
    "crates/mm/mm-traits",
    "crates/mm/mm-frame",
    "crates/mm/mm-paging",
    "crates/mm/mm-heap",
    "crates/mm/mm-cow",
    "crates/sched/sched-traits",
    "crates/sched/sched",
    "crates/proc/proc-traits",
    "crates/proc/proc",
    "crates/exec/elf",
    "crates/syscall/syscall",
    "crates/boot/boot-proto",
    "crates/drivers/driver-traits",
    "crates/drivers/serial/driver-uart-8250",
    "crates/drivers/block/virtio-blk",
    "crates/drivers/block/nvme",
    "crates/drivers/block/ahci",
    "crates/block/block",
    "crates/block/gpt",
    "crates/vfs/vfs",
    "crates/vfs/devfs",
    "crates/vfs/tmpfs",
    "crates/vfs/initramfs",
    "crates/vfs/procfs",
    "crates/fs/oxidefs",
    "crates/fs/fat32",
    "crates/net/net",
    "crates/net/tcpip",
    "crates/net/dhcp",
    "crates/net/dns",
    "crates/drivers/net/virtio-net",
    "crates/drivers/pci",
    "crates/input/input",
    "crates/drivers/input/ps2",
    "crates/drivers/input/virtio-input",
    "crates/graphics/fb",
    "crates/terminal",
    "crates/drivers/gpu/virtio-gpu",
    "crates/audio/audio",
    "crates/drivers/audio/virtio-snd",
    "crates/usb/usb",
    "crates/drivers/usb/xhci",
    "crates/drivers/usb/usb-msc",
    "crates/drivers/usb/usb-hid",
    "crates/container/namespace",
    "crates/container/cgroup",
    "crates/container/seccomp",
    "crates/hypervisor/vmm",
    "crates/hypervisor/vmx",
    "crates/hypervisor/virtio-emu",
    "crates/libc-support/pthread",
    "crates/libc-support/mmap",
    "crates/libc-support/dl",
    "crates/ai/hnsw",
    "crates/ai/embed",
    "crates/ai/indexd",
    "crates/security/crypto",
    "crates/security/trust",
    "crates/security/quarantine",
    "crates/security/x509",
    "crates/async/epoll",
    "crates/async/iouring",
    "crates/media/media",
    "crates/media/automount",
    "crates/net/smb",
    "crates/net/nfs",
    "crates/compat/v86",
    "crates/compat/python-sandbox",
    "crates/compat/binfmt",
    "crates/compat/syscall-compat",
    "crates/tty/tty",
    "crates/tty/pty",
    "crates/signal/signal",
    "crates/smp/smp",
    "crates/module/module",
    "userspace/libc",
    "userspace/init",
    "userspace/shell",
    "userspace/login",
    "userspace/passwd",
    "userspace/passwd",
    "userspace/getty",
    "userspace/coreutils",
    "userspace/modutils",
    "userspace/search",
    "userspace/oxide-std",
    "userspace/syscall-tests",
    "userspace/as",
    "userspace/ld",
    "userspace/ar",
    "userspace/make",
    "userspace/compression",
    "userspace/sshd",
    "userspace/ssh",
    "userspace/ssh_old",
    "userspace/servicemgr",
    "bootloader/boot-uefi",
    "apps/gwbasic",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/oxide"

[workspace.dependencies]
bitflags = "2.4"
spin = "0.9"
log = { version = "0.4", default-features = false }

# Internal crates
os_core = { path = "crates/core/os_core" }
os_log = { path = "crates/core/os_log" }
arch-traits = { path = "crates/arch/arch-traits" }
arch-x86_64 = { path = "crates/arch/arch-x86_64" }
mm-traits = { path = "crates/mm/mm-traits" }
mm-frame = { path = "crates/mm/mm-frame" }
mm-paging = { path = "crates/mm/mm-paging" }
mm-heap = { path = "crates/mm/mm-heap" }
mm-cow = { path = "crates/mm/mm-cow" }
sched-traits = { path = "crates/sched/sched-traits" }
sched = { path = "crates/sched/sched" }
proc-traits = { path = "crates/proc/proc-traits" }
proc = { path = "crates/proc/proc" }
elf = { path = "crates/exec/elf" }
syscall = { path = "crates/syscall/syscall" }
boot-proto = { path = "crates/boot/boot-proto" }
driver-traits = { path = "crates/drivers/driver-traits" }
vfs = { path = "crates/vfs/vfs" }
devfs = { path = "crates/vfs/devfs" }
tmpfs = { path = "crates/vfs/tmpfs" }
initramfs = { path = "crates/vfs/initramfs" }
procfs = { path = "crates/vfs/procfs" }
tty = { path = "crates/tty/tty" }
pty = { path = "crates/tty/pty" }
signal = { path = "crates/signal/signal" }
smp = { path = "crates/smp/smp" }
module = { path = "crates/module/module" }
block = { path = "crates/block/block" }
gpt = { path = "crates/block/gpt" }
virtio-blk = { path = "crates/drivers/block/virtio-blk" }
nvme = { path = "crates/drivers/block/nvme" }
ahci = { path = "crates/drivers/block/ahci" }
oxidefs = { path = "crates/fs/oxidefs" }
fat32 = { path = "crates/fs/fat32" }
net = { path = "crates/net/net" }
tcpip = { path = "crates/net/tcpip" }
dhcp = { path = "crates/net/dhcp" }
dns = { path = "crates/net/dns" }
virtio-net = { path = "crates/drivers/net/virtio-net" }
pci = { path = "crates/drivers/pci" }
input = { path = "crates/input/input" }
ps2 = { path = "crates/drivers/input/ps2" }
virtio-input = { path = "crates/drivers/input/virtio-input" }
fb = { path = "crates/graphics/fb" }
terminal = { path = "crates/terminal" }
virtio-gpu = { path = "crates/drivers/gpu/virtio-gpu" }
audio = { path = "crates/audio/audio" }
virtio-snd = { path = "crates/drivers/audio/virtio-snd" }
usb = { path = "crates/usb/usb" }
xhci = { path = "crates/drivers/usb/xhci" }
usb-msc = { path = "crates/drivers/usb/usb-msc" }
usb-hid = { path = "crates/drivers/usb/usb-hid" }
namespace = { path = "crates/container/namespace" }
cgroup = { path = "crates/container/cgroup" }
seccomp = { path = "crates/container/seccomp" }
vmm = { path = "crates/hypervisor/vmm" }
vmx = { path = "crates/hypervisor/vmx" }
virtio-emu = { path = "crates/hypervisor/virtio-emu" }
pthread = { path = "crates/libc-support/pthread" }
mmap = { path = "crates/libc-support/mmap" }
dl = { path = "crates/libc-support/dl" }
hnsw = { path = "crates/ai/hnsw" }
embed = { path = "crates/ai/embed" }
indexd = { path = "crates/ai/indexd" }
crypto = { path = "crates/security/crypto" }
trust = { path = "crates/security/trust" }
quarantine = { path = "crates/security/quarantine" }
x509 = { path = "crates/security/x509" }
epoll = { path = "crates/async/epoll" }
iouring = { path = "crates/async/iouring" }
media = { path = "crates/media/media" }
automount = { path = "crates/media/automount" }
smb = { path = "crates/net/smb" }
nfs = { path = "crates/net/nfs" }
v86 = { path = "crates/compat/v86" }
python-sandbox = { path = "crates/compat/python-sandbox" }
binfmt = { path = "crates/compat/binfmt" }
syscall-compat = { path = "crates/compat/syscall-compat" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
