[workspace]
resolver = "2"

members = [
    "kernel",
    "kernel/core/os_core",
    "kernel/core/os_log",
    "kernel/arch/arch-traits",
    "kernel/arch/arch-x86_64",
    "kernel/arch/arch-aarch64",
    "kernel/arch/arch-mips64",
    "kernel/mm/mm-traits",
    "kernel/mm/mm-core",
    "kernel/mm/mm-manager",
    "kernel/mm/mm-slab",
    "kernel/mm/mm-paging",
    "kernel/mm/mm-heap",
    "kernel/mm/mm-cow",
    "kernel/sched/sched-traits",
    "kernel/sched/sched",
    "kernel/proc/proc-traits",
    "kernel/proc/proc",
    "kernel/exec/elf",
    "kernel/syscall/syscall",
    "kernel/boot/boot-proto",
    "kernel/drivers/driver-traits",
    "kernel/drivers/serial/driver-uart-8250",
    "kernel/drivers/block/virtio-blk",
    "kernel/drivers/block/nvme",
    "kernel/drivers/block/ahci",
    "kernel/block/block",
    "kernel/block/gpt",
    "kernel/vfs/vfs",
    "kernel/vfs/devfs",
    "kernel/vfs/tmpfs",
    "kernel/vfs/initramfs",
    "kernel/vfs/procfs",
    "kernel/vfs/sysfs",
    "kernel/fs/oxidefs",
    "kernel/fs/fat32",
    "kernel/fs/ext4",
    "kernel/net/net",
    "kernel/net/tcpip",
    "kernel/net/dhcp",
    "kernel/net/dns",
    "kernel/drivers/net/virtio-net",
    "kernel/drivers/pci",
    "kernel/input/input",
    "kernel/drivers/input/ps2",
    "kernel/drivers/input/virtio-input",
    "kernel/graphics/fb",
    "kernel/tty/terminal",
    "kernel/drivers/gpu/virtio-gpu",
    "kernel/audio/audio",
    "kernel/drivers/audio/virtio-snd",
    "kernel/drivers/audio/intel-hda",
    "kernel/usb/usb",
    "kernel/drivers/usb/xhci",
    "kernel/drivers/usb/usb-msc",
    "kernel/drivers/usb/usb-hid",
    "kernel/container/namespace",
    "kernel/container/cgroup",
    "kernel/container/seccomp",
    "kernel/hypervisor/vmm",
    "kernel/hypervisor/vmx",
    "kernel/hypervisor/virtio-emu",
    "kernel/libc-support/pthread",
    "kernel/libc-support/mmap",
    "kernel/libc-support/dl",
    "kernel/ai/hnsw",
    "kernel/ai/embed",
    "kernel/ai/indexd",
    "kernel/security/crypto",
    "kernel/security/trust",
    "kernel/security/quarantine",
    "kernel/security/x509",
    "kernel/async/epoll",
    "kernel/async/iouring",
    "kernel/media/media",
    "kernel/media/automount",
    "kernel/net/smb",
    "kernel/net/nfs",
    "kernel/net/rdp/rdp-traits",
    "kernel/net/rdp/rdp-proto",
    "kernel/net/rdp/rdp-graphics",
    "kernel/net/rdp/rdp-input",
    "kernel/net/rdp/rdp-security",
    "kernel/net/rdp/rdp-server",
    "kernel/net/rdp/rdp-channels",
    "kernel/compat/v86",
    "kernel/compat/python-sandbox",
    "kernel/compat/binfmt",
    "kernel/compat/syscall-compat",
    "kernel/tty/tty",
    "kernel/tty/pty",
    "kernel/tty/vt",
    "kernel/signal/signal",
    "kernel/smp/smp",
    "kernel/acpi/acpi",
    "kernel/module/module",
    # libs — shared crates (kernel + userspace)
    # userspace/system — core boot/session programs
    "userspace/system/init",
    "userspace/system/getty",
    "userspace/system/login",
    "userspace/system/passwd",
    "userspace/system/servicemgr",
    # userspace/shell
    "userspace/shell",
    # userspace/coreutils
    "userspace/coreutils",
    # userspace/libs — shared libraries
    "userspace/libs/libc",
    "userspace/libs/oxide-std",
    "userspace/libs/compression",
    "userspace/libs/termcap",
    "userspace/libs/oxide-ncurses",
    "userspace/libs/vte",
    # userspace/services — daemons
    "userspace/services/networkd",
    "userspace/services/sshd",
    "userspace/services/rdpd",
    "userspace/services/journald",
    "userspace/services/journalctl",
    "userspace/services/soundd",
    # userspace/network — client tools
    "userspace/network/ssh",
    # userspace/devtools — on-target development tools
    "userspace/devtools/as",
    "userspace/devtools/ld",
    "userspace/devtools/ar",
    "userspace/devtools/make",
    "userspace/devtools/search",
    "userspace/devtools/modutils",
    # userspace/apps — end-user applications
    "userspace/apps/gwbasic",
    "userspace/apps/curses-demo",
    "userspace/apps/sound-client",
    "userspace/apps/doom",
    "userspace/apps/htop",
    # userspace/tests — test harnesses
    "userspace/tests/syscall-tests",
    "userspace/tests/evtest",
    "userspace/tests/argtest",
    "userspace/tests/signal-test",
    # bootloader
    "bootloader/boot-uefi",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/oxide"

[workspace.dependencies]
bitflags = "2.4"
spin = "0.9"
log = { version = "0.4", default-features = false }

# Internal crates
os_core = { path = "kernel/core/os_core" }
os_log = { path = "kernel/core/os_log" }
arch-traits = { path = "kernel/arch/arch-traits" }
arch-x86_64 = { path = "kernel/arch/arch-x86_64" }
arch-aarch64 = { path = "kernel/arch/arch-aarch64" }
arch-mips64 = { path = "kernel/arch/arch-mips64" }
mm-traits = { path = "kernel/mm/mm-traits" }
mm-core = { path = "kernel/mm/mm-core" }
mm-manager = { path = "kernel/mm/mm-manager" }
mm-slab = { path = "kernel/mm/mm-slab" }
mm-paging = { path = "kernel/mm/mm-paging" }
mm-heap = { path = "kernel/mm/mm-heap" }
mm-cow = { path = "kernel/mm/mm-cow" }
sched-traits = { path = "kernel/sched/sched-traits" }
sched = { path = "kernel/sched/sched" }
proc-traits = { path = "kernel/proc/proc-traits" }
proc = { path = "kernel/proc/proc" }
elf = { path = "kernel/exec/elf" }
syscall = { path = "kernel/syscall/syscall" }
boot-proto = { path = "kernel/boot/boot-proto" }
driver-traits = { path = "kernel/drivers/driver-traits" }
vfs = { path = "kernel/vfs/vfs" }
devfs = { path = "kernel/vfs/devfs" }
tmpfs = { path = "kernel/vfs/tmpfs" }
initramfs = { path = "kernel/vfs/initramfs" }
procfs = { path = "kernel/vfs/procfs" }
sysfs = { path = "kernel/vfs/sysfs" }
tty = { path = "kernel/tty/tty" }
pty = { path = "kernel/tty/pty" }
vt = { path = "kernel/tty/vt" }
signal = { path = "kernel/signal/signal" }
smp = { path = "kernel/smp/smp" }
acpi = { path = "kernel/acpi/acpi" }
module = { path = "kernel/module/module" }
block = { path = "kernel/block/block" }
gpt = { path = "kernel/block/gpt" }
virtio-blk = { path = "kernel/drivers/block/virtio-blk" }
nvme = { path = "kernel/drivers/block/nvme" }
ahci = { path = "kernel/drivers/block/ahci" }
oxidefs = { path = "kernel/fs/oxidefs" }
fat32 = { path = "kernel/fs/fat32" }
ext4 = { path = "kernel/fs/ext4" }
net = { path = "kernel/net/net" }
tcpip = { path = "kernel/net/tcpip" }
dhcp = { path = "kernel/net/dhcp" }
dns = { path = "kernel/net/dns" }
virtio-net = { path = "kernel/drivers/net/virtio-net" }
pci = { path = "kernel/drivers/pci" }
input = { path = "kernel/input/input" }
ps2 = { path = "kernel/drivers/input/ps2" }
virtio-input = { path = "kernel/drivers/input/virtio-input" }
fb = { path = "kernel/graphics/fb" }
terminal = { path = "kernel/tty/terminal" }
virtio-gpu = { path = "kernel/drivers/gpu/virtio-gpu" }
audio = { path = "kernel/audio/audio" }
virtio-snd = { path = "kernel/drivers/audio/virtio-snd" }
intel-hda = { path = "kernel/drivers/audio/intel-hda" }
usb = { path = "kernel/usb/usb" }
xhci = { path = "kernel/drivers/usb/xhci" }
usb-msc = { path = "kernel/drivers/usb/usb-msc" }
usb-hid = { path = "kernel/drivers/usb/usb-hid" }
namespace = { path = "kernel/container/namespace" }
cgroup = { path = "kernel/container/cgroup" }
seccomp = { path = "kernel/container/seccomp" }
vmm = { path = "kernel/hypervisor/vmm" }
vmx = { path = "kernel/hypervisor/vmx" }
virtio-emu = { path = "kernel/hypervisor/virtio-emu" }
pthread = { path = "kernel/libc-support/pthread" }
mmap = { path = "kernel/libc-support/mmap" }
dl = { path = "kernel/libc-support/dl" }
hnsw = { path = "kernel/ai/hnsw" }
embed = { path = "kernel/ai/embed" }
indexd = { path = "kernel/ai/indexd" }
crypto = { path = "kernel/security/crypto" }
trust = { path = "kernel/security/trust" }
quarantine = { path = "kernel/security/quarantine" }
x509 = { path = "kernel/security/x509" }
epoll = { path = "kernel/async/epoll" }
iouring = { path = "kernel/async/iouring" }
media = { path = "kernel/media/media" }
automount = { path = "kernel/media/automount" }
smb = { path = "kernel/net/smb" }
nfs = { path = "kernel/net/nfs" }
rdp-traits = { path = "kernel/net/rdp/rdp-traits" }
rdp-proto = { path = "kernel/net/rdp/rdp-proto" }
rdp-graphics = { path = "kernel/net/rdp/rdp-graphics" }
rdp-input = { path = "kernel/net/rdp/rdp-input" }
rdp-security = { path = "kernel/net/rdp/rdp-security" }
rdp-server = { path = "kernel/net/rdp/rdp-server" }
rdp-channels = { path = "kernel/net/rdp/rdp-channels" }
v86 = { path = "kernel/compat/v86" }
python-sandbox = { path = "kernel/compat/python-sandbox" }
binfmt = { path = "kernel/compat/binfmt" }
syscall-compat = { path = "kernel/compat/syscall-compat" }
vte = { path = "userspace/libs/vte" }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
