[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []

# Architecture selection (mutually exclusive)
arch-aarch64 = ["dep:arch-aarch64"]
arch-mips64 = ["dep:arch-mips64"]

debug-syscall = []    # Enable syscall debug output
debug-fork = ["proc/debug-fork"]       # Enable fork/exec debug output
debug-cow = []        # Enable COW page fault debug output
debug-pagefault = ["arch-x86_64/debug-pagefault"]  # Enable all page fault debug output
debug-timer = ["arch-x86_64/debug-timer"]  # Enable timer interrupt debug output
debug-mmap = ["mm-manager/debug-mmap"]  # Enable memory mapping debug output
debug-proc = []       # Enable process management debug output
debug-sched = ["syscall/debug-sched"]  # Enable scheduler context switch debug output
debug-mouse = []      # Enable mouse/input debug output (ISR-safe)
debug-input = ["input/debug-input", "ps2/debug-input", "arch-x86_64/debug-input"]      # Enable input event path debug output
debug-lock = ["terminal/debug-lock", "fb/debug-lock"]  # Enable lock contention warnings in ISR context
debug-console = ["devfs/debug-console", "vt/debug-console"]  # Enable console→VT I/O path tracing
debug-syscall-perf = ["syscall/debug-syscall-perf"]  # Log slow syscalls (>50K cycles)
debug-tty-read = ["tty/debug-tty-read", "devfs/debug-tty-read", "terminal/debug-tty-read"]  # Log TTY read operations + filter serial escapes
# -- GraveShift: debug-timer and debug-lock excluded from debug-all.
# debug-timer prints on EVERY timer tick on EVERY CPU (400/sec at 4×100Hz).
# debug-lock prints on EVERY terminal tick when contended (60/sec).
# Combined, they exceed 115200 baud serial bandwidth (11,520 bytes/sec),
# blocking timer interrupt handlers on serial I/O and starving all tasks.
# Enable individually with: KERNEL_FEATURES="debug-all,debug-timer,debug-lock"
debug-all = ["debug-syscall", "debug-fork", "debug-cow", "debug-pagefault", "debug-mmap", "debug-proc", "debug-sched", "debug-mouse", "debug-input", "debug-console", "debug-syscall-perf", "debug-tty-read"]

[dependencies]
os_core = { workspace = true }
os_log = { workspace = true }
perf = { path = "perf" }
arch-traits = { workspace = true }
arch-x86_64 = { path = "arch/arch-x86_64" }
arch-aarch64 = { path = "arch/arch-aarch64", optional = true }
arch-mips64 = { path = "arch/arch-mips64", optional = true }
mm-traits = { workspace = true }
mm-manager = { workspace = true }
mm-paging = { workspace = true }
mm-heap = { workspace = true }
mm-cow = { workspace = true }
sched = { workspace = true }
sched-traits = { workspace = true }
proc = { workspace = true }
proc-traits = { workspace = true }
elf = { workspace = true }
syscall = { workspace = true }
signal = { workspace = true }
boot-proto = { workspace = true }
vfs = { workspace = true }
devfs = { workspace = true }
tmpfs = { workspace = true }
initramfs = { workspace = true }
procfs = { workspace = true }
sysfs = { workspace = true }
tty = { workspace = true }
pty = { workspace = true }
vt = { workspace = true }
net = { workspace = true }
tcpip = { workspace = true }
dhcp = { workspace = true }
virtio-net = { workspace = true }
pci = { workspace = true }
driver-core = { workspace = true }
fb = { workspace = true }
virtio-gpu = { workspace = true }
audio = { workspace = true }
virtio-snd = { workspace = true }
intel-hda = { workspace = true }
terminal = { workspace = true }
input = { workspace = true }
ps2 = { workspace = true }
virtio-input = { workspace = true }
smp = { workspace = true }
acpi = { workspace = true }
crypto = { workspace = true }
spin = { workspace = true }
block = { workspace = true }
virtio-blk = { workspace = true }
gpt = { workspace = true }
ext4 = { workspace = true }
fat32 = { workspace = true }
