[package]
name = "kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
# — ColdCipher: hardened heap on by default — redzones, canaries, freed-fill.
# UAF shows up as 0xDD, overflow trips the 0xFD fence. Pain now, pain-free later.
default = ["heap-hardening"]

# P3.2: heap hardening — forwards the feature flag into mm-heap
heap-hardening = ["mm-heap/heap-hardening"]

# — SableWire: Architecture selection (mutually exclusive).
# Makefile auto-passes arch-$(ARCH) — never set these by hand.
arch-x86_64 = ["dep:arch-x86_64"]
arch-aarch64 = ["dep:arch-aarch64"]
arch-mips64 = ["dep:arch-mips64"]

debug-syscall = ["syscall/debug-syscall"]    # Enable syscall entry/exit traces ([SC] open/write/dup2, [SCR] reschedule)
debug-fork = ["proc/debug-fork"]       # Enable fork/exec debug output
debug-cow = []        # Enable COW page fault debug output
# — SableWire: `?` syntax = forward to arch dep only when it's the active arch.
# No more hardcoded arch-x86_64 — works for any arch that defines the feature.
debug-pagefault = ["arch-x86_64?/debug-pagefault"]  # Enable all page fault debug output
debug-timer = ["arch-x86_64?/debug-timer"]  # Enable timer interrupt debug output
debug-mmap = ["mm-manager/debug-mmap"]  # Enable memory mapping debug output
debug-buddy = ["mm-manager/debug-buddy"]  # Enable buddy allocator trace output (EXTREMELY noisy — fires on every alloc/free)
debug-paging = ["proc/debug-paging"]  # Enable page table/alloc/zero traces during exec (EXTREMELY noisy — fires on every page map + alloc)
debug-perf = ["arch-x86_64?/debug-perf"]  # Enable per-ISR PERF-WARN messages (53 bytes × hundreds/sec = feedback loop)
debug-proc = ["syscall/debug-proc", "proc/debug-proc"]       # Enable process management debug output
debug-sched = ["syscall/debug-sched", "sched/debug-sched", "arch-x86_64?/debug-sched"]  # Enable scheduler context switch debug output
debug-mouse = []      # Enable mouse/input debug output (ISR-safe)
debug-input = ["input/debug-input", "ps2/debug-input", "arch-x86_64?/debug-input", "virtio-input/debug-input"]      # Enable input event path debug output
debug-lock = ["terminal/debug-lock", "fb/debug-lock"]  # Enable lock contention warnings in ISR context
debug-console = ["devfs/debug-console", "vt/debug-console"]  # Enable console→VT I/O path tracing
debug-syscall-perf = ["syscall/debug-syscall-perf"]  # Log slow syscalls (>50K cycles)
debug-tty-read = ["tty/debug-tty-read", "devfs/debug-tty-read", "terminal/debug-tty-read"]  # Log TTY read operations + filter serial escapes
debug-terminal = ["terminal/debug-terminal"]  # Trace terminal write/blit operations
# -- GraveShift: hot-path features excluded from debug-all — they saturate 115200 baud.
# debug-timer: EVERY timer tick on EVERY CPU (400/sec at 4×100Hz).
# debug-lock: EVERY terminal tick when contended (60/sec).
# debug-buddy: EVERY alloc/free (~45 serial writes per operation).
# debug-paging: EVERY page map + alloc during exec (~30KB serial per fork+exec).
# debug-console: EVERY terminal write (VTD traces) — fires hundreds of times during colors test.
# debug-terminal: EVERY terminal write ([TW] traces) — same as debug-console, twice as many bytes.
# debug-syscall: EVERY open/write/dup2/exit entry+exit (~46 bytes × 20 opens = 920 bytes per top refresh).
# Any of these alone saturates 115200 baud (11,520 bytes/sec), blocking ISRs and starving tasks.
# Enable individually with: KERNEL_FEATURES="debug-all,debug-syscall"
debug-vma = ["mm-vma/debug-vma", "proc/debug-vma", "syscall/debug-vma"]
debug-all = ["debug-fork", "debug-cow", "debug-pagefault", "debug-mmap", "debug-proc", "debug-sched", "debug-mouse", "debug-input", "debug-syscall-perf", "debug-tty-read"]

[dependencies]
os_core = { workspace = true }
os_log = { workspace = true }
perf = { path = "perf" }
arch-traits = { workspace = true }
# — SableWire: all arch deps are optional — Makefile activates exactly one via --features arch-$(ARCH)
arch-x86_64 = { path = "arch/arch-x86_64", optional = true }
arch-aarch64 = { path = "arch/arch-aarch64", optional = true }
arch-mips64 = { path = "arch/arch-mips64", optional = true }
mm-traits = { workspace = true }
mm-manager = { workspace = true }
mm-paging = { workspace = true }
mm-heap = { workspace = true }
mm-vma = { workspace = true }
mm-cow = { workspace = true }
mm-pagedb = { workspace = true }
sched = { workspace = true }
sched-traits = { workspace = true }
proc = { workspace = true }
proc-traits = { workspace = true }
elf = { workspace = true }
syscall = { workspace = true }
signal = { workspace = true }
boot-proto = { workspace = true }
vfs = { workspace = true }
devfs = { workspace = true }
tmpfs = { workspace = true }
initramfs = { workspace = true }
procfs = { workspace = true }
sysfs = { workspace = true }
tty = { workspace = true }
pty = { workspace = true }
vt = { workspace = true }
net = { workspace = true }
tcpip = { workspace = true }
dhcp = { workspace = true }
virtio-net = { workspace = true }
pci = { workspace = true }
driver-core = { workspace = true }
fb = { workspace = true }
virtio-gpu = { workspace = true }
bochs-display = { workspace = true }
audio = { workspace = true }
virtio-snd = { workspace = true }
intel-hda = { workspace = true }
terminal = { workspace = true }
input = { workspace = true }
ps2 = { workspace = true }
virtio-input = { workspace = true }
smp = { workspace = true }
acpi = { workspace = true }
crypto = { workspace = true }
spin = { workspace = true }
block = { workspace = true }
virtio-blk = { workspace = true }
gpt = { workspace = true }
ext4 = { workspace = true }
fat32 = { workspace = true }
