[package]
name = "rust-gwbasic"
version = "0.1.0"
authors = ["chris17453"]
edition = "2021"
description = "Reimplementation of GW-BASIC in safe, modern Rust."
license = "MIT"

[lib]
name = "rust_gwbasic"
path = "src/lib.rs"

[[bin]]
name = "rust-gwbasic"
path = "src/main.rs"

[dependencies]
minifb = "0.25"
