[package]
name = "terminal"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
debug-lock = []  # Emit serial warnings on lock contention in ISR context
debug-tty-read = []  # Enable terminal query/response debug output

[dependencies]
bitflags.workspace = true
spin.workspace = true
fb = { path = "../graphics/fb" }
arch-x86_64 = { path = "../arch/arch-x86_64", optional = true }
