[package]
name = "coreutils"
version = "0.1.0"
edition = "2024"
description = "Core utilities for EFFLUX OS"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "uname"
path = "src/bin/uname.rs"

[[bin]]
name = "ps"
path = "src/bin/ps.rs"

[[bin]]
name = "kill"
path = "src/bin/kill.rs"

[dependencies]
efflux-libc = { path = "../efflux-libc" }
