[package]
name = "coreutils"
version = "0.1.0"
edition = "2024"
description = "Core utilities for OXIDE OS"

# File operations
[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "ln"
path = "src/bin/ln.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "mkdir"
path = "src/bin/mkdir.rs"

[[bin]]
name = "rmdir"
path = "src/bin/rmdir.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

# Text processing
[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "vi"
path = "src/bin/vim.rs"

[[bin]]
name = "less"
path = "src/bin/less.rs"

[[bin]]
name = "sed"
path = "src/bin/sed.rs"

[[bin]]
name = "awk"
path = "src/bin/awk.rs"

[[bin]]
name = "head"
path = "src/bin/head.rs"

[[bin]]
name = "tail"
path = "src/bin/tail.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[[bin]]
name = "grep"
path = "src/bin/grep.rs"

[[bin]]
name = "tee"
path = "src/bin/tee.rs"

# System utilities
[[bin]]
name = "uname"
path = "src/bin/uname.rs"

[[bin]]
name = "hostname"
path = "src/bin/hostname.rs"

[[bin]]
name = "date"
path = "src/bin/date.rs"

[[bin]]
name = "sleep"
path = "src/bin/sleep.rs"

[[bin]]
name = "clear"
path = "src/bin/clear.rs"

[[bin]]
name = "chmod"
path = "src/bin/chmod.rs"

# User utilities
[[bin]]
name = "id"
path = "src/bin/id.rs"

[[bin]]
name = "whoami"
path = "src/bin/whoami.rs"

[[bin]]
name = "env"
path = "src/bin/env.rs"

[[bin]]
name = "useradd"
path = "src/bin/useradd.rs"

[[bin]]
name = "groupadd"
path = "src/bin/groupadd.rs"

# Process utilities
[[bin]]
name = "ps"
path = "src/bin/ps.rs"

[[bin]]
name = "kill"
path = "src/bin/kill.rs"

[[bin]]
name = "vttest"
path = "src/bin/vttest.rs"

# Memory utilities
[[bin]]
name = "free"
path = "src/bin/free.rs"

# Path utilities
[[bin]]
name = "basename"
path = "src/bin/basename.rs"

[[bin]]
name = "dirname"
path = "src/bin/dirname.rs"

[[bin]]
name = "which"
path = "src/bin/which.rs"

# Shell utilities
[[bin]]
name = "test"
path = "src/bin/test.rs"

# Misc utilities
[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "yes"
path = "src/bin/yes.rs"

[[bin]]
name = "seq"
path = "src/bin/seq.rs"

[[bin]]
name = "sort"
path = "src/bin/sort.rs"

[[bin]]
name = "uniq"
path = "src/bin/uniq.rs"

[[bin]]
name = "cut"
path = "src/bin/cut.rs"

[[bin]]
name = "tr"
path = "src/bin/tr.rs"

[[bin]]
name = "xargs"
path = "src/bin/xargs.rs"

[[bin]]
name = "find"
path = "src/bin/find.rs"

[[bin]]
name = "stat"
path = "src/bin/stat.rs"

# Network utilities
[[bin]]
name = "dhclient"
path = "src/bin/dhclient.rs"

[[bin]]
name = "wget"
path = "src/bin/wget.rs"

[[bin]]
name = "ifconfig"
path = "src/bin/ifconfig.rs"

[[bin]]
name = "ip"
path = "src/bin/ip.rs"

[[bin]]
name = "ping"
path = "src/bin/ping.rs"

[[bin]]
name = "nslookup"
path = "src/bin/nslookup.rs"

[[bin]]
name = "hostctl"
path = "src/bin/hostctl.rs"

[[bin]]
name = "nc"
path = "src/bin/nc.rs"

# Graphics utilities
[[bin]]
name = "fbtest"
path = "src/bin/fbtest.rs"

[[bin]]
name = "fbperf"
path = "src/bin/fbperf.rs"

# Keyboard utilities
[[bin]]
name = "loadkeys"
path = "src/bin/loadkeys.rs"

# System info utilities
[[bin]]
name = "uptime"
path = "src/bin/uptime.rs"

[[bin]]
name = "df"
path = "src/bin/df.rs"

[[bin]]
name = "dmesg"
path = "src/bin/dmesg.rs"

# Network monitoring
[[bin]]
name = "netstat"
path = "src/bin/netstat.rs"

# Binary/Debug utilities
[[bin]]
name = "hexdump"
path = "src/bin/hexdump.rs"

[[bin]]
name = "strings"
path = "src/bin/strings.rs"

[[bin]]
name = "readlink"
path = "src/bin/readlink.rs"

[[bin]]
name = "du"
path = "src/bin/du.rs"

[[bin]]
name = "od"
path = "src/bin/od.rs"

[[bin]]
name = "pwd"
path = "src/bin/pwd.rs"

[[bin]]
name = "file"
path = "src/bin/file.rs"

[[bin]]
name = "more"
path = "src/bin/more.rs"

# Process utilities
[[bin]]
name = "pgrep"
path = "src/bin/pgrep.rs"

[[bin]]
name = "pkill"
path = "src/bin/pkill.rs"

[[bin]]
name = "nice"
path = "src/bin/nice.rs"

[[bin]]
name = "nohup"
path = "src/bin/nohup.rs"

[[bin]]
name = "timeout"
path = "src/bin/timeout.rs"

# Path utilities
[[bin]]
name = "realpath"
path = "src/bin/realpath.rs"

# Archive utilities
[[bin]]
name = "tar"
path = "src/bin/tar.rs"

[[bin]]
name = "gzip"
path = "src/bin/gzip.rs"

[[bin]]
name = "gunzip"
path = "src/bin/gunzip.rs"

# File comparison
[[bin]]
name = "diff"
path = "src/bin/diff.rs"

# Binary utilities
[[bin]]
name = "dd"
path = "src/bin/dd.rs"

# Expression evaluator
[[bin]]
name = "expr"
path = "src/bin/expr.rs"

# Terminal utilities
[[bin]]
name = "reset"
path = "src/bin/reset.rs"

# Ownership utilities
[[bin]]
name = "chown"
path = "src/bin/chown.rs"

# Firewall utilities
[[bin]]
name = "fw"
path = "src/bin/fw.rs"

# Filesystem utilities
[[bin]]
name = "mkfs_ext4"
path = "src/bin/mkfs_ext4.rs"

[[bin]]
name = "mount"
path = "src/bin/mount.rs"

[[bin]]
name = "umount"
path = "src/bin/umount.rs"

# Process monitoring
[[bin]]
name = "top"
path = "src/bin/top.rs"

[[bin]]
name = "proctest"
path = "src/bin/proctest.rs"

# Color test utility
[[bin]]
name = "testcolors"
path = "src/bin/testcolors.rs"

# Signal delivery test
[[bin]]
name = "sigtest"
path = "src/bin/sigtest.rs"

[dependencies]
libc = { path = "../libs/libc" }
heapless = "0.8"
compression = { path = "../libs/compression" }
termcap = { path = "../libs/termcap", default-features = false }
oxide-ncurses = { path = "../libs/oxide-ncurses", default-features = false }
