[package]
name = "modutils"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Module utilities for OXIDE OS"

[dependencies]
libc = { path = "../libc" }

[[bin]]
name = "insmod"
path = "src/bin/insmod.rs"

[[bin]]
name = "rmmod"
path = "src/bin/rmmod.rs"

[[bin]]
name = "lsmod"
path = "src/bin/lsmod.rs"

[[bin]]
name = "modinfo"
path = "src/bin/modinfo.rs"
